; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/hisi_sas/extr_hisi_sas_v3_hw.c_phys_init_v3_hw.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/hisi_sas/extr_hisi_sas_v3_hw.c_phys_init_v3_hw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hisi_hba = type { i32, %struct.hisi_sas_phy* }
%struct.hisi_sas_phy = type { %struct.asd_sas_phy }
%struct.asd_sas_phy = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hisi_hba*)* @phys_init_v3_hw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @phys_init_v3_hw(%struct.hisi_hba* %0) #0 {
  %2 = alloca %struct.hisi_hba*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.hisi_sas_phy*, align 8
  %5 = alloca %struct.asd_sas_phy*, align 8
  store %struct.hisi_hba* %0, %struct.hisi_hba** %2, align 8
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %32, %1
  %7 = load i32, i32* %3, align 4
  %8 = load %struct.hisi_hba*, %struct.hisi_hba** %2, align 8
  %9 = getelementptr inbounds %struct.hisi_hba, %struct.hisi_hba* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %35

12:                                               ; preds = %6
  %13 = load %struct.hisi_hba*, %struct.hisi_hba** %2, align 8
  %14 = getelementptr inbounds %struct.hisi_hba, %struct.hisi_hba* %13, i32 0, i32 1
  %15 = load %struct.hisi_sas_phy*, %struct.hisi_sas_phy** %14, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.hisi_sas_phy, %struct.hisi_sas_phy* %15, i64 %17
  store %struct.hisi_sas_phy* %18, %struct.hisi_sas_phy** %4, align 8
  %19 = load %struct.hisi_sas_phy*, %struct.hisi_sas_phy** %4, align 8
  %20 = getelementptr inbounds %struct.hisi_sas_phy, %struct.hisi_sas_phy* %19, i32 0, i32 0
  store %struct.asd_sas_phy* %20, %struct.asd_sas_phy** %5, align 8
  %21 = load %struct.asd_sas_phy*, %struct.asd_sas_phy** %5, align 8
  %22 = getelementptr inbounds %struct.asd_sas_phy, %struct.asd_sas_phy* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %28, label %27

27:                                               ; preds = %12
  br label %32

28:                                               ; preds = %12
  %29 = load %struct.hisi_hba*, %struct.hisi_hba** %2, align 8
  %30 = load i32, i32* %3, align 4
  %31 = call i32 @hisi_sas_phy_enable(%struct.hisi_hba* %29, i32 %30, i32 1)
  br label %32

32:                                               ; preds = %28, %27
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %6

35:                                               ; preds = %6
  ret void
}

declare dso_local i32 @hisi_sas_phy_enable(%struct.hisi_hba*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
